--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html lang="hu">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <link rel="stylesheet" href="styles\normalize.css" />
-    <link rel="stylesheet" href="styles\main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />
+    <!--[if IE]><link rel="stylesheet" href="styles\main_notSupported.css" /><![endif]-->
+    <![if !IE]>
+    <link rel="stylesheet" href="styles\normalize.css" media= "screen and (min-width: 320px)"/>
+    <link rel="stylesheet" href="styles\main.css" media= "screen and (min-width: 320px)" />
+    <link rel="stylesheet" href="styles\main_lowRes.css" media= "screen and (max-width: 320px)" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" media= "screen and (min-width: 320px)"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin media= "screen and (min-width: 320px)"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <![endif]>
     <title>Backstage - Event & Hostess</title>
   </head>
   <header>
     <body class="colorgrad-bg-light hide-320">
       <nav class="nav">
         <ul class="nav-list colorgrad-bg-dense box-shadow-light">
-          <li class="nav-list__item"><a href=""
-            ><img class="nav-list__logo" src="assets\backstage logo white.png" alt="Backstage logo" 
-          /></a></li>
+          <li class="nav-list__item"><a href="" alt="Újratöltés"><img alt="Backstage logo" class="nav-list__logo" src="assets\backstage logo white.png"/></a></li>
           <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Rólunk</a></li>
           <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Referenciák</a></li>
           <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Szolgáltatások</a></li>
           <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Állás</a></li>
           <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Kapcsolat</a></li>
-          <li><a class="nav-list__item hide show-720" href=""><img class="nav-list__menu show-720 " src="" alt="MB."></a></li>
+          <li><a class="nav-list__item hide show-720" href="" alt="Menü"><img class="nav-list__menu show-720 " src="" alt="MB."></a></li>
         </ul>
       </nav>
   </header>
