hero component ready

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <body class="colorgrad-bg-light hide-320">
       <nav class="nav">
-        <ul class="nav-list colorgrad-bg-dense box-shadow-light">
+        <ul class="nav-list colorgrad-bg-dense container-pos box-shadow-light">
           <li class="nav-list__item"><a href="" alt="Újratöltés"><img alt="Backstage logo" class="nav-list__logo" src="assets\backstage logo white.png"/></a></li>
           <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Rólunk</a></li>
           <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Referenciák</a></li>
@@ -32,5 +32,19 @@
         </ul>
       </nav>
   </header>
+  <main>
+    <section class="hero">
+      <div class="hero__content container-pos box-shadow-light">
+        <div class="hero__image-container" >
+          <img class="hero__image" src="assets\kezdokep.JPG" alt="">
+        </div>        
+        <div class="hero__body">
+          <h1 class="hero__title">Stabilan a rendezvények hátterében</h1>
+          <a href="" class="button glow-white">Írjon nekünk</a>
+        </div>
+      </div>
+    </section>
+
+  </main>
   </body>
 </html>
