media component desktop ready

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
           <a href="" class="button glow-white">Írjon nekünk</a>
         </div>
       </div>
+      <div class="media">
+        <div class="media_content container-pos box-shadow-light">
+          <div class="media__image-container" >
+            <img class="media__image" src="assets\kezdokep.JPG" alt="">
+          </div>
+          <div class="media__body">
+            <h2 class="media__title">Személyes jelenlét minden formában</h2>
+            <p class="media__text">Protokolláris feladatokban, hostess szolgáltatásban, személyzeti erőforrás biztosításában, promóciók lebonyolításában, animátori feladatokban és bármilyen rendezvényhez kapcsolódó munkavégzésben megbízhatóan és rugalmasan rendelkezésre állunk.</p>
+          </div>
+        </div>
+      </div>
     </section>
 
   </main>
