media component mobile

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </div>
       </div>
       <div class="media">
-        <div class="media_content container-pos box-shadow-light">
+        <div class="media__content container-pos box-shadow-light">
           <div class="media__image-container" >
-            <img class="media__image" src="assets\kezdokep.JPG" alt="">
+            <img class="media__image" src="assets\3.kép.jpg" alt="">
           </div>
           <div class="media__body">
             <h2 class="media__title">Személyes jelenlét minden formában</h2>
