divider component ready

--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
         </div>
       </div>
     </section>
+    <div class="divider1">
+      <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1-hide colorgrad-bg-dense">
+          </div>
+        <div>
+          <img class="divider__img" src="assets\backstage logo.png" alt="Backstage logo">
+        </div>
+          <div class="separator2 colorgrad-bg-dense">
+          </div>
+      </div>
+    </div>
+    <div class="divider2">
+      <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1 colorgrad-bg-dense">
+          </div>
+        <div>
+          <img class="divider__img" src="assets\backstage logo.png" alt="Backstage logo">
+        </div>
+          <div class="separator2-hide colorgrad-bg-dense">
+          </div>
+      </div>
+    </div>
 
   </main>
   </body>
