mobile menu prototype

--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
           </div>
       </div>
     </div>
-
+    <div class="floating-menu">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
   </main>
   </body>
+  <script>
+    let fn = document.getElementsByClassName("floating-menu")[0];
+    window.addEventListener("scroll",function(){
+      fn.style.height = "5rem";
+      fn.style.width = "5rem";
+      setTimeout(function(){ fn.style.height = "0rem"; fn.style.width = "0rem";}, 5000)
+});
+  </script>
 </html>
