Article component with header and footer ready

--- a/index.html
+++ b/index.html
@@ -2,15 +2,41 @@
 <html lang="hu">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />
-    <!--[if IE]><link rel="stylesheet" href="styles\main_notSupported.css" /><![endif]-->
+    <!--[if IE
+      ]><link rel="stylesheet" href="styles\main_notSupported.css"
+    /><![endif]-->
     <![if !IE]>
-    <link rel="stylesheet" href="styles\normalize.css" media= "screen and (min-width: 319px)"/>
-    <link rel="stylesheet" href="styles\main.css" media= "screen and (min-width: 319px)" />
-    <link rel="stylesheet" href="styles\main_lowRes.css" media= "screen and (max-width: 319px)" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" media= "screen and (min-width: 319px)"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin media= "screen and (min-width: 319px)"/>
+    <link
+      rel="stylesheet"
+      href="styles\normalize.css"
+      media="screen and (min-width: 319px)"
+    />
+    <link
+      rel="stylesheet"
+      href="styles\main.css"
+      media="screen and (min-width: 319px)"
+    />
+    <link
+      rel="stylesheet"
+      href="styles\main_lowRes.css"
+      media="screen and (max-width: 319px)"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+      media="screen and (min-width: 319px)"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+      media="screen and (min-width: 319px)"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&display=swap"
       rel="stylesheet"
@@ -18,81 +44,254 @@
     <![endif]>
     <title>Backstage - Event & Hostess</title>
   </head>
-  <header>
-    <body class="colorgrad-bg-light hide-320">
-      <nav class="nav">
-        <ul class="nav-list colorgrad-bg-dense container-pos box-shadow-light">
-          <li class="nav-list__item"><a href="" alt="Újratöltés"><img alt="Backstage logo" class="nav-list__logo" src="assets\backstage logo white.png"/></a></li>
-          <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Rólunk</a></li>
-          <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Referenciák</a></li>
-          <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Szolgáltatások</a></li>
-          <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Állás</a></li>
-          <li class="nav-list__item glow-white hide-720 ease-out"><a href="">Kapcsolat</a></li>
-          <li><a class="nav-list__item hide show-720" href="" alt="Menü"><img class="nav-list__menu show-720 " src="" alt="MB."></a></li>
-        </ul>
-      </nav>
-  </header>
-  <main>
-    <section class="hero">
-      <div class="hero__content container-pos box-shadow-light">
-        <div class="hero__image-container" >
-          <img class="hero__image" src="assets\kezdokep.JPG" alt="">
-        </div>        
-        <div class="hero__body">
-          <h1 class="hero__title">Stabilan a rendezvények hátterében</h1>
-          <a href="" class="button glow-white">Írjon nekünk</a>
+  <body class="colorgrad-bg-light hide-320">
+    <nav class="nav">
+      <ul class="nav-list colorgrad-bg-dense container-pos box-shadow-light">
+        <li class="nav-list__item">
+          <a href="" alt="Újratöltés"
+            ><img
+              alt="Backstage logo"
+              class="nav-list__logo"
+              src="assets\backstage logo white.png"
+          /></a>
+        </li>
+        <li class="nav-list__item glow-white hide-720 ease-out">
+          <a href="">Rólunk</a>
+        </li>
+        <li class="nav-list__item glow-white hide-720 ease-out">
+          <a href="">Referenciák</a>
+        </li>
+        <li class="nav-list__item glow-white hide-720 ease-out">
+          <a href="">Szolgáltatások</a>
+        </li>
+        <li class="nav-list__item glow-white hide-720 ease-out">
+          <a href="">Állás</a>
+        </li>
+        <li class="nav-list__item glow-white hide-720 ease-out">
+          <a href="">Kapcsolat</a>
+        </li>
+        <li>
+          <a class="nav-list__item hide show-720" href="" alt="Menü"
+            ><img class="nav-list__menu show-720" src="" alt="MB."
+          /></a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <section class="hero">
+        <div class="hero__content container-pos box-shadow-light">
+          <div class="hero__image-container">
+            <img class="hero__image" src="assets\kezdokep.JPG" alt="" />
+          </div>
+          <div class="hero__body">
+            <h1 class="hero__title">Stabilan a rendezvények hátterében</h1>
+            <a href="" class="button glow-white">Írjon nekünk</a>
+          </div>
+        </div>
+        <div class="media">
+          <div class="media__content container-pos box-shadow-light">
+            <div class="media__image-container">
+              <img class="media__image" src="assets\3.kép.jpg" alt="" />
+            </div>
+            <article class="media__body">
+              <h3 class="media__title">Személyes jelenlét minden formában</h3>
+              <p class="media__text">
+                Protokolláris feladatokban, hostess szolgáltatásban, személyzeti
+                erőforrás biztosításában, promóciók lebonyolításában, animátori
+                feladatokban és bármilyen rendezvényhez kapcsolódó
+                munkavégzésben megbízhatóan és rugalmasan rendelkezésre állunk.
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
+      <div class="divider1">
+        <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1-hide colorgrad-bg-dense"></div>
+          <div>
+            <img
+              class="divider__img"
+              src="assets\backstage logo.png"
+              alt="Backstage logo"
+            />
+          </div>
+          <div class="separator2 colorgrad-bg-dense"></div>
         </div>
       </div>
-      <div class="media">
-        <div class="media__content container-pos box-shadow-light">
-          <div class="media__image-container" >
-            <img class="media__image" src="assets\3.kép.jpg" alt="">
+      <article class="about-us">
+        <header>
+          <div class="media2-header__content container-pos box-shadow-light">
+            <h2>Ismerj meg minket!</h2>
+            <h3>Rólunk</h3>
           </div>
-          <div class="media__body">
-            <h2 class="media__title">Személyes jelenlét minden formában</h2>
-            <p class="media__text">Protokolláris feladatokban, hostess szolgáltatásban, személyzeti erőforrás biztosításában, promóciók lebonyolításában, animátori feladatokban és bármilyen rendezvényhez kapcsolódó munkavégzésben megbízhatóan és rugalmasan rendelkezésre állunk.</p>
+        </header>
+        <div class="media2__content container-pos box-shadow-light">
+          <div class="media2__image-container box-shadow-grey">
+            <img src="assets\4.kép.jpg" alt="" class="media2__image" />
+          </div>
+          <div class="media2__body box-shadow-grey">
+            <p class="media2__text">
+              Ismertető jegyeink: problémamegoldás, közvetlenség, megbízhatóság.
+            </p>
+            <p class="media2__text">
+              Ránk igazán érvényes a családi vállalkozás kifejezés, házaspár
+              vagyunk és a munkában is kiegészítjük egymást.
+            </p>
+            <p class="media2__text">
+              15 éve vagyunk jelen a rendezvények hátterében.
+            </p>
+            <p class="media2__text">
+              Felelősek és precízen vagyunk: kollégáinkat személyesen választjuk
+              ki és tanítjuk be, kapcsolataink tartósak.
+            </p>
           </div>
         </div>
+        <footer>
+          <div class="media2__footer-content container-pos box-shadow-light">
+            <div class="media2__footer-body">
+              <div class="circle"></div>
+              <p class="media2__footer-text">személyesség</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle"></div>
+              <p class="media2__footer-text">supervisori rendszer</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle"></div>
+              <p class="media2__footer-text">műfaji sokszínűség</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle"></div>
+              <p class="media2__footer-text">protokoll fókusz</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle"></div>
+              <p class="media2__footer-text">különleges egyenruhák</p>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <div class="divider2">
+        <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1 colorgrad-bg-dense"></div>
+          <div>
+            <img
+              class="divider__img"
+              src="assets\backstage logo.png"
+              alt="Backstage logo"
+            />
+          </div>
+          <div class="separator2-hide colorgrad-bg-dense"></div>
+        </div>
       </div>
+      <article class="services"></article>
+      <div class="divider1">
+        <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1-hide colorgrad-bg-dense"></div>
+          <div>
+            <img
+              class="divider__img"
+              src="assets\backstage logo.png"
+              alt="Backstage logo"
+            />
+          </div>
+          <div class="separator2 colorgrad-bg-dense"></div>
+        </div>
+      </div>
+      <article class="refs"></article>
+      <div class="divider2">
+        <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1 colorgrad-bg-dense"></div>
+          <div>
+            <img
+              class="divider__img"
+              src="assets\backstage logo.png"
+              alt="Backstage logo"
+            />
+          </div>
+          <div class="separator2-hide colorgrad-bg-dense"></div>
+        </div>
+      </div>
+      <article class="jobs"></article>
+      <div class="divider1">
+        <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1-hide colorgrad-bg-dense"></div>
+          <div>
+            <img
+              class="divider__img"
+              src="assets\backstage logo.png"
+              alt="Backstage logo"
+            />
+          </div>
+          <div class="separator2 colorgrad-bg-dense"></div>
+        </div>
+      </div>
+      <article class="contacts">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2688.626858819386!2d18.84488431475097!3d47.63338417918653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476a709f81bc3e41%3A0x425a6ec08f7dd47e!2sBackstage%20Event%20Hostess%20Kft.!5e0!3m2!1shu!2shu!4v1634817160130!5m2!1shu!2shu"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+        <a href="tel:+36703123264" target="_blank"
+          ><img src="assets/phone-30-128.png" alt=""
+        /></a>
+        <a
+          href="mailto:jozsef.mandula@gmail.com?subject=Mail from Our Site&body=Body-goes-here"
+          target="_blank"
+          ><img src="assets/email-128.png" alt=""
+        /></a>
+        <a href="https://www.facebook.com/343652312363771/" target="_blank"
+          ><img src="assets/facebook-4-128.png" alt=""
+        /></a>
+        <img src="https://www.facebook.com/343652312363771/" alt="" />
+        <a
+          href="https://www.facebook.com/messages/t/343652312363771/"
+          target="_blank"
+          ><img src="assets/messenger-128.png" alt=""
+        /></a>
+      </article>
+      <div class="divider2">
+        <div class="divider__content container-pos box-shadow-light">
+          <div class="separator1 colorgrad-bg-dense"></div>
+          <div>
+            <img
+              class="divider__img"
+              src="assets\backstage logo.png"
+              alt="Backstage logo"
+            />
+          </div>
+          <div class="separator2-hide colorgrad-bg-dense"></div>
+        </div>
+      </div>
+    </main>
+    <section class="floating-menu">
+      <h3 class="hide">Floating menu</h3>
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </section>
-    <div class="divider1">
-      <div class="divider__content container-pos box-shadow-light">
-          <div class="separator1-hide colorgrad-bg-dense">
-          </div>
-        <div>
-          <img class="divider__img" src="assets\backstage logo.png" alt="Backstage logo">
-        </div>
-          <div class="separator2 colorgrad-bg-dense">
-          </div>
-      </div>
-    </div>
-    <div class="divider2">
-      <div class="divider__content container-pos box-shadow-light">
-          <div class="separator1 colorgrad-bg-dense">
-          </div>
-        <div>
-          <img class="divider__img" src="assets\backstage logo.png" alt="Backstage logo">
-        </div>
-          <div class="separator2-hide colorgrad-bg-dense">
-          </div>
-      </div>
-    </div>
-    <div class="floating-menu">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
-    </div>
-  </main>
   </body>
   <script>
     let fn = document.getElementsByClassName("floating-menu")[0];
-    window.addEventListener("scroll",function(){
+    fn.style.opacity = "0";
+    window.addEventListener("scroll", function () {
       fn.style.opacity = "0.7";
-      setTimeout(function(){ fn.style.opacity = "0";}, 5000)
-});
-document.body.addEventListener('click', function(){
-            fn.style.opacity = "0.7";
-            setTimeout(function(){ fn.style.opacity = "0";}, 5000)
-      }, true);
+      setTimeout(function () {
+        fn.style.opacity = "0";
+      }, 5000);
+    });
+    document.body.addEventListener(
+      "click",
+      function () {
+        fn.style.opacity = "0.7";
+        setTimeout(function () {
+          fn.style.opacity = "0";
+        }, 5000);
+      },
+      true
+    );
   </script>
 </html>
