open fb links on mobil in app

--- a/index.html
+++ b/index.html
@@ -243,14 +243,19 @@
           target="_blank"
           ><img src="assets/email-128.png" alt=""
         /></a>
-        <a href="https://www.facebook.com/343652312363771/" target="_blank"
+        <a class="hide-720" href="https://www.facebook.com/343652312363771/" target="_blank"
           ><img src="assets/facebook-4-128.png" alt=""
+          /></a>
+          <a class="hide show-720" href="fb://343652312363771/"
+            ><img src="assets/facebook-4-128.png" alt=""
         /></a>
-        <img src="https://www.facebook.com/343652312363771/" alt="" />
         <a
-          href="https://www.facebook.com/messages/t/343652312363771/"
+        class="hide-720" href="https://www.facebook.com/messages/t/343652312363771/"
           target="_blank"
           ><img src="assets/messenger-128.png" alt=""
+          /><a
+          class="hide show-720" href="fb://messages/t/343652312363771/"
+            ><img src="assets/messenger-128.png" alt=""
         /></a>
       </article>
       <div class="divider2">
