--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
         <a class="hide-720" href="https://www.facebook.com/343652312363771/" target="_blank"
           ><img src="assets/facebook-4-128.png" alt=""
           /></a>
-          <a class="hide show-720" href="fb://343652312363771/"
+          <a class="hide show-720" href="fb://Backstage-Event-Hostess-Kft-343652312363771/343652312363771/"
             ><img src="assets/facebook-4-128.png" alt=""
         /></a>
         <a
-        class="hide-720" href="https://www.facebook.com/messages/t/343652312363771/"
+        class="hide-720" href="fb-messenger://messages/t/343652312363771/"
           target="_blank"
           ><img src="assets/messenger-128.png" alt=""
           /><a
