--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <a class="hide-720" href="https://www.facebook.com/343652312363771/" target="_blank"
           ><img src="assets/facebook-4-128.png" alt=""
           /></a>
-          <a class="hide show-720" href="fb://page/?id=343652312363771" target="_top"
+          <a class="hide show-720" href="fb://page/?id=343652312363771" 
             ><img src="assets/facebook-4-128.png" alt=""
         /></a>
         <a
@@ -254,7 +254,7 @@
           target="_blank"
           ><img src="assets/messenger-128.png" alt=""
           /><a
-          class="hide show-720" href="fb-messenger://messages/t/?id=343652312363771/" target="_top"
+          class="hide show-720" href="https://www.facebook.com/messages/t/343652312363771"
             ><img src="assets/messenger-128.png" alt=""
         /></a>
       </article>
