--- a/index.html
+++ b/index.html
@@ -250,11 +250,10 @@
             ><img src="assets/facebook-4-128.png" alt=""
         /></a>
         <a
-        class="hide-720" href="https://www.facebook.com/messages/t/343652312363771"
-          target="_blank"
+        class="hide-720" href="https://www.facebook.com/messages/t/343652312363771" target="_blank"
           ><img src="assets/messenger-128.png" alt=""
           /><a
-          class="hide show-720" href="https://www.facebook.com/messages/t/343652312363771"
+          class="hide show-720" href="fb-messenger://messages/t/343652312363771"
             ><img src="assets/messenger-128.png" alt=""
         /></a>
       </article>
