--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         class="hide-720" href="https://www.messenger.com/t/343652312363771" target="_blank"
           ><img src="assets/messenger-128.png" alt=""
           /><a
-          class="hide show-720" href="fb-messenger://Backstage-Event-Hostess-Kft-343652312363771"
+          class="hide show-720" href="fb-messenger://share?link=https://www.messenger.com/t/343652312363771"
             ><img src="assets/messenger-128.png" alt=""
         /></a>
       </article>
