--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         class="hide-720" href="https://www.messenger.com/t/343652312363771" target="_blank"
           ><img src="assets/messenger-128.png" alt=""
           /><a
-          class="hide show-720" href="intent://user/343652312363771/#Intent;scheme=fb-messenger;package=com.facebook.orca;S.browser_fallback_url=https://www.messenger.com/t/343652312363771;end"
+          class="hide show-720" href="https://www.messenger.com/t/343652312363771"
             ><img src="assets/messenger-128.png" alt=""
         /></a>
       </article>
