--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />
     <!--[if IE
@@ -246,7 +246,7 @@
         <a class="hide-720" href="https://www.facebook.com/343652312363771/" target="_blank"
           ><img src="assets/facebook-4-128.png" alt=""
           /></a>
-          <a class="hide show-720" href="fb://page/?id=343652312363771" 
+          <a class="hide show-720" href="fb://page/?ref=343652312363771" 
             ><img src="assets/facebook-4-128.png" alt=""
         /></a>
         <a
