--- a/index.html
+++ b/index.html
@@ -243,19 +243,10 @@
           target="_blank"
           ><img src="assets/email-128.png" alt=""
         /></a>
-        <a class="hide-720" href="https://www.facebook.com/343652312363771/" target="_blank"
-          ><img src="assets/facebook-4-128.png" alt=""
-          /></a>
-          <a class="hide show-720" href="fb://page?id=343652312363771" 
-            ><img src="assets/facebook-4-128.png" alt=""
-        /></a>
-        <a
-        class="hide-720" href="https://www.messenger.com/t/343652312363771" target="_blank"
-          ><img src="assets/messenger-128.png" alt=""
-          /><a
-          class="hide show-720" href="https://www.messenger.com/t/343652312363771"
-            ><img src="assets/messenger-128.png" alt=""
-        /></a>
+        <a href="https://www.facebook.com/343652312363771/" target="_blank"
+          ><img src="assets/facebook-4-128.png" alt=""/></a>
+        <a href="https://www.messenger.com/t/343652312363771" target="_blank">
+          <img src="assets/messenger-128.png" alt=""/>
       </article>
       <div class="divider2">
         <div class="divider__content container-pos box-shadow-light">
