fine tunning components

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <section class="hero">
         <div class="hero__content container-pos box-shadow-light">
           <div class="hero__image-container">
-            <img class="hero__image" src="assets\kezdokep.JPG" alt="" />
+            <img class="image" src="assets\kezdokep.JPG" alt="" />
           </div>
           <div class="hero__body">
             <h1 class="hero__title">Stabilan a rendezvények hátterében</h1>
@@ -91,7 +91,7 @@
         <div class="media">
           <div class="media__content container-pos box-shadow-light">
             <div class="media__image-container">
-              <img class="media__image" src="assets\3.kép.jpg" alt="" />
+              <img class="image" src="assets\3.kép.jpg" alt="" />
             </div>
             <article class="media__body">
               <h3 class="media__title">Személyes jelenlét minden formában</h3>
@@ -127,7 +127,7 @@
         </header>
         <div class="media2__content container-pos box-shadow-light">
           <div class="media2__image-container box-shadow-grey">
-            <img src="assets\4.kép.jpg" alt="" class="media2__image" />
+            <img src="assets\4.kép.jpg" alt="" class="image" />
           </div>
           <div class="media2__body box-shadow-grey">
             <p class="media2__text">
@@ -149,23 +149,23 @@
         <footer>
           <div class="media2__footer-content container-pos box-shadow-light">
             <div class="media2__footer-body">
-              <div class="circle"></div>
+              <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">személyesség</p>
             </div>
             <div class="media2__footer-body">
-              <div class="circle"></div>
+              <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">supervisori rendszer</p>
             </div>
             <div class="media2__footer-body">
-              <div class="circle"></div>
+              <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">műfaji sokszínűség</p>
             </div>
             <div class="media2__footer-body">
-              <div class="circle"></div>
+              <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">protokoll fókusz</p>
             </div>
             <div class="media2__footer-body">
-              <div class="circle"></div>
+              <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">különleges egyenruhák</p>
             </div>
           </div>
@@ -262,7 +262,7 @@
         </div>
       </div>
     </main>
-    <section class="floating-menu">
+    <section class="floating-menu circle-reverse box-shadow-grey">
       <h3 class="hide">Floating menu</h3>
       <div class="line"></div>
       <div class="line"></div>
