fixing mising bacground on landscape mobile

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="hu" colorgrad-bg-light>
+<html lang="hu">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />
     <!--[if IE
