Refractoring components and all mediacomps ready

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           </div>
         </div>
         <div class="media">
-          <div class="media__content container-pos box-shadow-light">
-            <div class="media__image-container">
+          <div class="media__content container-pos box-shadow-light componet-glue">
+            <div class="media__image-container two-border-radius--right two-border-radius--bottom">
               <img class="image" src="assets\3.kép.jpg" alt="" />
             </div>
             <article class="media__body">
@@ -125,11 +125,11 @@
             <h3>Rólunk</h3>
           </div>
         </header>
-        <div class="media2__content container-pos box-shadow-light">
-          <div class="media2__image-container box-shadow-grey">
+        <section class="media2__content container-pos box-shadow-light componet-glue">
+          <div class="media2__image-container box-shadow-grey two-border-radius--left two-border-radius--bottom">
             <img src="assets\4.kép.jpg" alt="" class="image" />
           </div>
-          <div class="media2__body box-shadow-grey">
+          <div class="media2__body box-shadow-grey two-border-radius--right two-border-radius--top">
             <p class="media2__text">
               Ismertető jegyeink: problémamegoldás, közvetlenség, megbízhatóság.
             </p>
@@ -145,9 +145,9 @@
               ki és tanítjuk be, kapcsolataink tartósak.
             </p>
           </div>
-        </div>
+        </section>
         <footer>
-          <div class="media2__footer-content container-pos box-shadow-light">
+          <div class="media2__footer-content container-pos box-shadow-light componet-glue">
             <div class="media2__footer-body">
               <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">személyesség</p>
@@ -184,7 +184,100 @@
           <div class="separator2-hide colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="services"></article>
+      <article class="services">
+        <header>
+          <div class="media2-header__content container-pos box-shadow-light">
+            <h2>Eseményeknek élünk</h2>
+            <h3>Szolgáltatásaink</h3>
+          </div>
+        </header>
+        <section class="media2__content flip-flex container-pos box-shadow-light componet-glue">
+          <div class="media2__image-container box-shadow-grey two-border-radius--right two-border-radius--bottom">
+            <img src="assets\2.kép.jpg" alt="" class="image" />
+          </div>
+          <div class="media2__body box-shadow-grey two-border-radius--left two-border-radius--top">
+            <p class="media2__text">
+              Regisztráció
+            </p>
+            <p class="media2__text">
+              Vendégirányítás 
+            </p>
+            <p class="media2__text">
+              Beléptetés- ültetés - kísérés 
+            </p>
+            <p class="media2__text">
+              Protokoll feladatok ellátása 
+            </p>
+            <p class="media2__text">
+              Rendezvényhez kapcsolódó termékek árusítása 
+            </p>
+            <p class="media2__text">
+              Call center
+            </p>
+          </div>
+        </section>
+        <footer>
+          <div class="media2__footer-content container-pos box-shadow-light componet-glue">
+            <div class="media2__footer-body">
+              <div class="circle box-shadow-grey"></div>
+              <p class="media2__footer-text">létszámtól függetlenül</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle box-shadow-grey"></div>
+              <p class="media2__footer-text">modern eszközökkel</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle box-shadow-grey"></div>
+              <p class="media2__footer-text">bármivel bármit bárhová</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle box-shadow-grey"></div>
+              <p class="media2__footer-text">nincs lehetelen</p>
+            </div>
+          </div>
+        </footer>
+        <section class="media2__content container-pos box-shadow-light componet-glue">
+          <div class="media2__image-container box-shadow-grey two-border-radius--left two-border-radius--bottom">
+            <img src="assets\4.kép.jpg" alt="" class="image" />
+          </div>
+          <div class="media2__body box-shadow-grey two-border-radius--right two-border-radius--top">
+            <p class="media2__text">
+              Promóció 
+            </p>
+            <p class="media2__text">
+              Tematikus animáció
+            </p>
+            <p class="media2__text">
+              Csomagolás
+            </p>
+            <p class="media2__text">
+              Játékok, sorsolások működtetése
+            </p>
+            <p class="media2__text">
+              Merchandising
+            </p>
+            <p class="media2__text">
+              Szállítás - rakodás
+            </p>
+          </div>
+        </section>
+        <footer>
+          <div class="media2__footer-content container-pos box-shadow-light componet-glue">
+            <div class="media2__footer-body">
+              <div class="circle box-shadow-grey"></div>
+              <p class="media2__footer-text">saját betanítási metódus</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle box-shadow-grey"></div>
+              <p class="media2__footer-text">egyedi kommunikációs rendszer</p>
+            </div>
+            <div class="media2__footer-body">
+              <div class="circle box-shadow-grey"></div>
+              <p class="media2__footer-text">megoldás fókusz</p>
+            </div>
+          </div>
+        </footer>
+      </article>
       <div class="divider1">
         <div class="divider__content container-pos box-shadow-light">
           <div class="separator1-hide colorgrad-bg-dense"></div>
@@ -198,7 +291,54 @@
           <div class="separator2 colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="refs"></article>
+      <article class="refs">
+        <header>
+          <div class="media2-header__content container-pos box-shadow-light">
+            <h2>Tapasztalataink</h2>
+            <h3>Referenciák</h3>
+          </div>
+        </header>
+        <section class="media2__content container-pos box-shadow-light flip-flex componet-glue">
+          <div class="media2__image-container box-shadow-grey two-border-radius--right two-border-radius--bottom">
+            <img src="assets\2.kép.jpg" alt="" class="image" />
+          </div>
+          <div class="media2__body box-shadow-grey media3-color-gradient-pink two-border-radius--left two-border-radius--top">
+            <h3 class="media2__body-heading center-text" >K&H Családi Nap</h3>
+            <p class="media2__text center-text">
+              Regisztráció
+            </p>
+            <p class="media2__text center-text">
+              Vendégirányítás 
+            </p>
+            <p class="media2__text center-text">
+              Csomagolás
+            </p>
+            <p class="media2__text center-text">
+              Szállítás
+            </p>
+          </div>
+        </section>
+        <section class="media2__content container-pos box-shadow-light componet-glue">
+          <div class="media2__image-container box-shadow-grey two-border-radius--left two-border-radius--bottom">
+            <img src="assets\4.kép.jpg" alt="" class="image" />
+          </div>
+          <div class="media2__body box-shadow-grey media3-color-gradient-purple two-border-radius--right two-border-radius--top">
+            <h3 class="media2__body-heading center-text" >Cisco Expo</h3>
+            <p class="media2__text center-text">
+              Regisztráció
+            </p>
+            <p class="media2__text center-text">
+              Vendégirányítás 
+            </p>
+            <p class="media2__text center-text">
+              Csomagolás
+            </p>
+            <p class="media2__text center-text">
+              Szállítás
+            </p>
+          </div>
+        </section>
+      </article>
       <div class="divider2">
         <div class="divider__content container-pos box-shadow-light">
           <div class="separator1 colorgrad-bg-dense"></div>
