text fine tunning

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
       <article class="about-us">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
-            <h2>Ismerj meg minket!</h2>
-            <h3>Rólunk</h3>
+            <h2 class="text-shadow-grey" >Ismerj meg minket!</h2>
+            <h3 class="text-shadow-grey" >Rólunk</h3>
           </div>
         </header>
         <section class="media2__content container-pos box-shadow-light componet-glue">
@@ -187,8 +187,8 @@
       <article class="services">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
-            <h2>Eseményeknek élünk</h2>
-            <h3>Szolgáltatásaink</h3>
+            <h2  class="text-shadow-grey" >Eseményeknek élünk</h2>
+            <h3  class="text-shadow-grey" >Szolgáltatásaink</h3>
           </div>
         </header>
         <section class="media2__content flip-flex container-pos box-shadow-light componet-glue">
@@ -294,8 +294,8 @@
       <article class="refs">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
-            <h2>Tapasztalataink</h2>
-            <h3>Referenciák</h3>
+            <h2 class="text-shadow-grey" >Tapasztalataink</h2>
+            <h3 class="text-shadow-grey" >Referenciák</h3>
           </div>
         </header>
         <section class="media2__content container-pos box-shadow-light flip-flex componet-glue">
