Logging click on th body

--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
     document.body.addEventListener(
       "click",
       function () {
+        console.log("click");
         fn.style.opacity = "0.7";
         setTimeout(function () {
           fn.style.opacity = "0";
